@@ -4,6 +4,8 @@ KalibroProcessor is the processing web service for Mezuro.
 
 == Unreleased
 
+* Deprecates KalibroModule#module_results
+
 == v1.2.1 - 01/04/2016
 
 * Update kalibro_client
